# jsontas

./: .coveragerc  AUTHORS.rst  CHANGELOG.rst  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.rst  setup.cfg  setup.py
docs/: Makefile  conf.py  examples.rst  index.rst  readme.rst  requirements.txt
src/jsontas/: __init__.py  __main__.py  dataset.py  jsontas.py
src/jsontas/data_structures/: __init__.py  condition.py  datastructure.py  expand.py  filter.py  from_item.py  list.py  operator.py  reduce.py  request.py  wait.py
tests/: conftest.py
