[metadata]
name = jsontas
description = JSONTas is a tool for generating dynamic JSON structures.
author = Tobias Persson
author-email = tobias.persson@axis.com
license = Apache License, Version 2.0
long-description = file: README.rst
long-description-content-type = text/x-rst; charset=UTF-8
url = https://github.com/AxisCommunications/jsontas/
project-urls =
    Documentation = https://jsontas.readthedocs.io/
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    License :: OSI Approved :: Apache Software License

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
setup_requires = pyscaffold>=3.2a0,<3.3a0
install_requires = requests

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    pytest
    pytest-cov

[options.entry_points]
console_scripts = 
    jsontas = jsontas.__main__:run

[test]
extras = True

[tool:pytest]
addopts =
    --cov jsontas --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[flake8]
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pycodestyle]
max-line-length=100
ignore=E722

[pyscaffold]
version = 3.2.3
package = jsontas
